# uchat

./: CMakeLists.txt  Makefile
client/: send_receive.html
inc/: uchat.h
src/: uchat_server.c
src/database/: uchat_db
src/libs/: base64.c  handshake.c  sha1.c  uchat.c
src/models/: mx_recieve_message.c
